Fixes and Enhancements since Version 0.5 alpha 2

 Changed, Enhanced, or Newly Deprecated Features

 - Standardized these characteristics of name and address syntax:

   * '//' at the beginning of URL bodies is *mandatory* when the URL begins
     with an "authority" as described by RFC 2396.  When the URL is not
     required to contain an authority (e.g. 'peak.storage.SQL.GenericSQL_URL'),
     the '//' is *optional*, and the canonical form of the URL will not include
     it.

   * Standardized names for RFC 2396 fields: 'user', 'passwd', 'host', and
     'port'.

 - Added 'peak.metamodels.ASDL', a metamodel for the Zephyr Abstract Syntax
   Description Language.  ASDL is a convenient way to describe a domain model
   for an abstract syntax tree (AST), and the models generated with the new
   ASDL tool can be combined with concrete syntax to create a complete parsing
   solution for "mini languages", possibly including the Python language
   itself.  (Future versions of the Python and Jython compilers are likely to
   use AST models based on ASDL, and in the current Python CVS sandbox there's
   already an ASDL model of Python's AST available.)

 - Enhanced 'fmtparse' and 'peak.model' to allow using types as syntax rules
   for parsing, including abstract types.  An abstract type's syntax is the
   union (using 'fmtparse.Alternatives') of the syntaxes of its subclasses
   (as specified by 'mdl_subclassNames').

 - Added 'IMainLoop.setExitCode()' and 'IMainLoop.childForked()' methods, to
   allow reactor-driven components to control the mainloop's exit code.

 - DEPRECATED 'peak.util.signal_stack'.  Instead, bind to a
   'running.ISignalManager' and use its 'addHandler()/removeHandler()' methods.
   This has the same effect as 'pushSignals()' and 'popSignals()', except that
   you do not have to remove handlers in the same order as you add them, and
   *all* active handlers are invoked for a given signal that they handle.
